--- a/03-counter-app/package.json
+++ b/03-counter-app/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "prop-types": "^15.7.2"
+    "vitest": "^0.6.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
