--- a/03-counter-app/package.json
+++ b/03-counter-app/package.json
@@ -10,15 +10,19 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "vitest": "^0.6.0"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.11",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "enzyme-to-json": "^3.6.2",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
